tests/machine/x/ocaml/group_by_conditional_sum.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_conditional_sum.ml", line 41, characters 34-37:
41 |       __res1 := (if x.flag then x.val else 0) :: !__res1;
                                       ^^^
Error: Syntax error


Context (around line 41):
  39 |       __res0 := [("cat",g.key);("share",(sum (let __res1 = ref [] in
  40 |   List.iter (fun x ->
  41 |       __res1 := (if x.flag then x.val else 0) :: !__res1;
  42 |   ) g;
  43 | List.rev !__res1)
